# quicknote-vala

./: .gitignore  CMakeLists.txt  com.github.moroen.quicknote.gschema.xml  main.vala  meson.build  meson_options.txt  meson_post_install.py
data/: quicknote.gresources.xml  resources.gresources.xml
data/desktop/: launcher.desktop.in
data/settings/: com.github.moroen.quicknote.gschema.xml
data/ui/: main.ui  sample.ui  settings.ui
src/: main.vala  mainwindow.vala  note.vala  settings.vala  test.vala  util.vala
